Task7/03-secure-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secure-privileged-fixed
  namespace: audit-zone
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 101
        capabilities:
          drop: ["ALL"]
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-secure-hostpath-fixed
  namespace: audit-zone
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 101
        capabilities:
          drop: ["ALL"]
      volumeMounts:
        - name: cache-tmp
          mountPath: /tmp
  volumes:
    - name: cache-tmp
      emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-secure-root-fixed
  namespace: audit-zone
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 101
        capabilities:
          drop: ["ALL"]
