Task7/05-gatekeeper-constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyPrivileged
metadata:
  name: deny-privileged-in-audit-zone
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - audit-zone
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostPath
metadata:
  name: deny-hostpath-in-audit-zone
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - audit-zone
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceNonRootReadonly
metadata:
  name: enforce-non-root-readonly-in-audit-zone
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - audit-zone
